# mlflow-guide

mlflow-iris/: README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
mlflow-iris/.github/workflows/: cd-production.yml  cd-staging.yml  ci.yml
mlflow-iris/configs/: environment.yml  feature_config.yml  model_config.yml
mlflow-iris/docs/: CONTRIBUTING.md  FEATURE_CATALOG.md  MODEL_CARD.md
mlflow-iris/pipelines/: __init__.py  inference_pipeline.py  training_pipeline.py
mlflow-iris/scripts/: deploy_endpoint.py  promote_model.py  validate_model.py
mlflow-iris/src/: __init__.py
mlflow-iris/src/components/: __init__.py  scoring.py
mlflow-iris/src/data/: __init__.py  load_data.py
mlflow-iris/src/features/: __init__.py  feature_builder.py  feature_definitions.py
mlflow-iris/src/models/: __init__.py  model_registry.py  model_validator.py  train_model.py
mlflow-iris/src/utils/: __init__.py  config.py  logging.py  mlflow_utils.py
mlflow-iris/tests/: conftest.py
mlflow-iris/tests/integration/: test_inference.py  test_training_pipeline.py
mlflow-iris/tests/unit/: test_data.py  test_features.py  test_model.py
